styles.css
body {
    font-family: Arial, sans-serif !important;
}

.banner {
  /*background-image: url('');*/
  background-size: cover;
  background-position: center;
  background-color: #f2f2f2;
  width: 100vw;
  max-width: 600px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  align-items: center;
}

.book-section {
    /*background-image: url('');*/
  background-size: cover;
  background-position: center;
  background-color: #f2f2f2;
  width: 100vw;
  max-width: 600px;
  display: flex;
  flex-direction:column;
  align-items: center;
}

.book-title {
  font-weight: bold;
  font-size: 200%;
  padding: 10px;
  text-align: center;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

.author {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  padding: 20px;
}

.blurb {
  padding: 10px 20px;
  margin: 30px;
  background-color: white;
  border: 2px solid black;
  border-radius: 15px;
  width: 75%;
  max-width: 500px;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  font-size: 90%;
}

.book-and-blurb {
    /*background-image: url('');*/
  background-size: cover;
  background-position: center;
  background-color: #f2f2f2;
  width: 100%;
  display: flex;
  flex-direction:column;
  align-items: center;
  justify-content: space-between;
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 80%; /* Adjust as needed */
}

.opening-paragraph {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%; /* Adjust as needed */
  text-align: justify;
}

.normal-paragraph {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50vw; /* Adjust as needed */
  text-align: justify;
}

.navbar {
  width: 50%;
  display: flex;
  /*flex-direction: row;*/
  margin-left: auto;
  margin-right: auto;
  align-items: center;
  justify-content: center;
}

.navbar ul {
  list-style-type: none; /* Removes bullet points */
  margin: 10px;
  padding: 10px;
  display: flex; /* Makes the list items horizontal */
  background-color: white;
  gap: 10px;
}

.navbar li a {
  display: block; /* Makes the whole area clickable */
  color: white;
  padding: 14px 20px;
  text-decoration: none;
  background-color: #333;
}

.navbar li a:hover {
  background-color: #111; /* Adds a hover effect */
}

.wrapper {
  display: flex;
  flex-direction: column;
  align-items: center; /* This centers both children horizontally */
  width: 100%;
}

.cover {
  width: 60vw;
  min-width: 100px;
  max-width: 500px;
  height: auto;
}

.buy-button {
  border : 2px solid white;
  background-color:darkgray;
  padding: 20px;
  margin: 5px;
}

.buy-button-container {
  display: flex;
  justify-content: left;
  flex-direction: column;
}

